# Voxels

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
components/sd_database/: CMakeLists.txt  sd_database.c
components/sd_database/include/: sd_database.h
components/tca9554_io_expander/: CMakeLists.txt  idf_component.yml  tca9554_io_expander.c
components/tca9554_io_expander/include/: tca9554_io_expander.h
components/waveshare_bsp/: CMakeLists.txt  Kconfig  idf_component.yml  waveshare_bsp.c
components/waveshare_bsp/include/bsp/: config.h  display.h  esp-bsp.h  esp32_s3_touch_lcd_4.h  touch.h
components/waveshare_bsp/priv_include/: bsp_err_check.h
main/: CMakeLists.txt  api.js  app.js  index.html  main.c  qr_ui.c  sd_format_ui.c  settings.html  setup.html  splash_ui.c  splash_ui.h  styles.css  web_server.c  web_server.h  widgets.html  wifi_ap.c  wifi_ap.h
main/core/: font_size.c  font_size.h  time_sync.c  time_sync.h  ui_state.c  ui_state.h  weather_service.c  weather_service.h  web_server.c  web_server.h  widget_manager.c  widget_manager.h  wifi_ap.c  wifi_ap.h
main/ui/screens/: qr_ui.c  qr_ui.h  sd_format_ui.h  status_ui.c  status_ui.h
main/ui/widgets/: calendar_widget.c  calendar_widget.h  clock_widget.c  clock_widget.h  timer_widget.c  timer_widget.h  weather_widget.c  weather_widget.h  widget_common.h
